--- a/SlidingMenu/res/layout/login.xml
+++ b/SlidingMenu/res/layout/login.xml
@@ -41,5 +41,13 @@
         android:layout_marginTop="30dp"
         android:onClick="sendMessage"
         android:text="@string/login" />
+    
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:onClick="signup"
+        android:text="Signup" />
 
 </LinearLayout>
