--- a/SlidingMenu/res/menu/main.xml
+++ b/SlidingMenu/res/menu/main.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    
+    <!-- Message, should appear as action button -->
+    <item android:id="@+id/action_message"
+          android:icon="@drawable/ic_message"
+          android:title="@string/message"
+          android:showAsAction="ifRoom" />	
 </menu>
