--- a/SlidingMenu/res/layout/fragment_home.xml
+++ b/SlidingMenu/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:hint="What is your minds"
        />
 
    <Button
@@ -19,6 +20,7 @@
        android:layout_height="wrap_content"
        android:text="OK" />
    <ListView 
+       android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listview1"
