--- a/SlidingMenu/res/layout/list_selector.xml
+++ b/SlidingMenu/res/layout/list_selector.xml
@@ -10,5 +10,5 @@
  
     <item android:state_selected="true"
      android:state_pressed="false"
-        android:drawable="@drawable/gradient_bg_hover" />
+        android:drawable="@drawable/gradient_bg" />
 </selector>
